Creato con Colab

--- a/Support2_classificazione.ipynb
+++ b/Support2_classificazione.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOm/mPkBTA6Wh1WKfM5UUCk",
+      "authorship_tag": "ABX9TyMWVXenSkEIAMh8Q+pEhHpq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -122,7 +122,7 @@
       "metadata": {
         "id": "9rzZ9g6OjzYR"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,7 +144,7 @@
         "id": "1-ex011Aj3nb",
         "outputId": "966715e2-9bb3-4cf3-d193-a8ddedb31e30"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -650,7 +650,7 @@
         "id": "STsG7wpzn8cI",
         "outputId": "82809d38-40e2-4f05-c147-da0d51ace485"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1045,7 +1045,7 @@
           "height": 320
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1521,7 +1521,7 @@
         "id": "Cp5VUZ42IMMl",
         "outputId": "98d6c56a-55e4-437c-eb3b-0193a6808457"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1813,7 +1813,7 @@
         "id": "emlxx6E6FcpQ",
         "outputId": "4b45e955-282e-45d0-fa88-f275aef9b2a6"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1908,7 +1908,7 @@
         "id": "RbBrsPBP3Ncg",
         "outputId": "7fc9e7f5-5a5c-4bc3-e9d7-1a0904d60fda"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1960,7 +1960,7 @@
         "id": "F93-kdNHAmA4",
         "outputId": "5e000f27-3334-41d5-cf33-884c45977394"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2019,7 +2019,7 @@
         "id": "y7h_Wjc7I56G",
         "outputId": "84e5037b-d0c1-4993-87e6-3b2a63774eda"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2317,7 +2317,7 @@
         "id": "otq6gtysyWmo",
         "outputId": "b6dab7af-ec3e-4b0a-8463-8a382dc3ef86"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2383,7 +2383,7 @@
         "outputId": "328b6a80-f231-48b6-ec6a-744a7aa8e6e2",
         "collapsed": true
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2418,7 +2418,7 @@
         },
         "outputId": "36b26e3e-571d-4ab3-8a81-26e3ff33c64c"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2443,7 +2443,7 @@
         "id": "8b0EWAVbGWuR",
         "outputId": "c2c51730-5dba-43f6-e378-487b5abc8d69"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2490,7 +2490,7 @@
         "id": "tq95N_2woYJd",
         "outputId": "64b40fea-6869-4de7-869f-6d24313b5c86"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2845,7 +2845,7 @@
         },
         "outputId": "ba2145c6-f88d-4736-d34d-ce51d7a4e4ae"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3211,7 +3211,7 @@
         "id": "QKFdTndcQXXE",
         "outputId": "1a6104f0-a06c-4bf7-843a-242d51edb58f"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3251,7 +3251,7 @@
         "id": "o9mZ1yaRs7Uj",
         "outputId": "d764cd3c-27c5-40ba-f90f-d9a2d0dc254b"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3284,7 +3284,7 @@
         "id": "b5El3KPPtUOr",
         "outputId": "c710aad5-8279-4cfe-d0af-25ea1bb79b2a"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3369,7 +3369,7 @@
         "id": "-kQ4D4neqmc0",
         "outputId": "7bc636f6-a7b3-4bb5-b240-f2394172526a"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3448,7 +3448,7 @@
         "id": "Q9WoOp6uwj0z",
         "outputId": "52888470-0b66-4cb8-d3bd-a83ade053c05"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3527,7 +3527,7 @@
         },
         "outputId": "482ccee6-70f0-4deb-a84c-f237a6493aa8"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3568,7 +3568,7 @@
         "id": "6Kd88LoivbT7",
         "outputId": "c7fbffbc-0d3e-4e5b-be4f-3a79b8b947c4"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3622,7 +3622,7 @@
         "id": "PTyrFUWPtacu",
         "outputId": "9c46b363-b648-49b3-907c-fd5429621d3e"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3660,7 +3660,7 @@
         "id": "FOqF8s2gpvrt",
         "outputId": "4a519aea-d863-4f18-dc4f-dacc40732f0e"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3690,7 +3690,7 @@
         "\n",
         "comparison_df = pd.DataFrame({\n",
         "    \"survive_6m_real\": Y_test,\n",
-        "    \"lda_proba_survive\": chosen_model.predict_proba(X_test)[:, 1],\n",
+        "    \"logreg_proba_survive\": chosen_model.predict_proba(X_test)[:, 1],\n",
         "    \"surv6m_dataset\": df.loc[test_idx, \"surv6m\"]\n",
         "})\n",
         "\n",
@@ -3706,7 +3706,7 @@
         },
         "outputId": "c54325f6-35bb-4ca0-c176-c621822eb99e"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
